--- a/Red-Line.css
+++ b/Red-Line.css
@@ -12,7 +12,7 @@
   }
 
   h1, h2 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans Condensed', sans-serif;
   }
 
 
@@ -143,6 +143,7 @@
 
 
 /* start of contact page */
+
 
 .contact-middle {
   display: grid;
