--- a/Red-Line.css
+++ b/Red-Line.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300');
 
 
-
 .navbar {
   background-color: rgb(240, 239, 237)!important;
   }
@@ -15,6 +14,11 @@
     font-family: 'Open Sans Condensed', sans-serif;
   }
 
+.carousel {
+  transition: 4s;
+  transition: repeat;
+}
+
 
 /* start of home page*/
 .home-full {
@@ -22,16 +26,22 @@
   grid-template-columns: 65% 35%;
   grid-template-rows: auto;}
 
-  a.tel {
-    color: rgb(159, 197, 55);
+  p.tel {
+    color: white;
+    background-color: rgb(159, 197, 55);
     font-size: 40px;
-    font-weight: bold;
+    font-weight: bolder;
+    margin-bottom: 300px;
+    float: none;
+    display: inline-block;
+    padding-left: 60px;
+    padding-right: 60px;
   }
 
   h2.H-head {
     font-size: 50px;
     font-weight: bolder;
-  }
+      }
 
   .home-left h2 {
     text-transform: uppercase;
@@ -53,10 +63,12 @@
 }
 
 .home-right img {
-  overflow: hidden;
-    max-width: 150%;
+      max-width: 150%;
       }
 
+.home-right {
+  overflow: hidden;
+}
 
 .H-middle {
   display:grid;
@@ -112,9 +124,7 @@
 }
 
 .h-f-m {
-  padding-top: 35%;
-  padding-left: 25%;
-  align-items: center;
+    margin: auto;
     }
 
 .h-f-m ul {
@@ -148,7 +158,7 @@
 .contact-middle {
   display: grid;
   grid-template-columns: 40% 60%;
-    }
+      }
 
 .c-m-l {
   margin-top: 7%;
@@ -163,7 +173,9 @@
 
 .contact {
   margin-top: 5%;
-  margin-left: 10% }
+  float: right;
+  margin-right: 8%;
+}
 
 .contact {
   width: 650px;
@@ -199,9 +211,13 @@
   grid-template-rows: 100%;
 }
 
+.footer-img img{
+  width: 100%;
+}
+
 .btn {
   float: right;
-  margin-right: 20px;
+  margin-right: 50px;
   width: 250px;
   height: 50px;
   background: rgb(159, 197, 55);
@@ -210,7 +226,6 @@
   color: white;
   text-transform: uppercase;
   font-weight: bold;
-  margin: 0 auto;
   cursor: pointer;
   border-radius: 5px;
 }
@@ -242,3 +257,7 @@
 }
 
 /* End of contact page */
+
+.nav-item:hover, .active:hover {
+    background-color: rgb(159, 197, 55);
+}
