--- a/Red-Line.css
+++ b/Red-Line.css
@@ -19,6 +19,11 @@
   transition: repeat;
 }
 
+.H-head-contact {
+  position: absolute;
+  margin: auto;
+}
+
 
 /* start of home page*/
 .home-full {
@@ -37,6 +42,15 @@
     padding-left: 60px;
     padding-right: 60px;
   }
+
+p.tel:hover {
+  cursor: pointer;
+  background-color: black;
+  opacity: 0.8;
+  filter: alpha(opacity=100)
+  transition:  600ms ease;
+  -webkit-transition: -webkit-filter 600ms ease;
+}
 
   h2.H-head {
     font-size: 50px;
@@ -118,6 +132,23 @@
 
 }
 
+.H-middle2 {
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+.h-m-r-2 {
+  padding-top: 100px;
+  padding-left: 50px;
+}
+
+.h-m-r-2 h2 {
+  font-weight: bold;
+  color: rgb(159, 197, 55);
+}
+
+
+
 .h-f-l {
   padding-top: 12%;
   padding-left: 18%;
@@ -149,6 +180,9 @@
   padding-right: 18%;
   text-align: right;
 }
+
+
+
 /* end of home page */
 
 
